mail url redirect

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGc...
 
 # Tambo - Get from https://console.tambo.co
 NEXT_PUBLIC_TAMBO_API_KEY=tambo_sk_...
+
+# Site URL - Your production domain (for email verification redirects)
+NEXT_PUBLIC_SITE_URL=https://flux-ai.app
