--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGc...
 # Tambo - Get from https://console.tambo.co
 NEXT_PUBLIC_TAMBO_API_KEY=tambo_sk_...
 
-# Site URL - Your production domain (for email verification redirects)
-NEXT_PUBLIC_SITE_URL=https://flux-ai.app
+# Site URL - Set based on your environment
+# For local development: http://localhost:3000
+# For production: https://your-domain.com
+# This must match one of the Redirect URLs configured in Supabase Settings > URL Configuration
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
